@@ -115,6 +115,7 @@ AC_ARG_ENABLE(tcl-fallback,    [  --enable-tcl-fallback     Install Tcl scripts 
 AC_ARG_ENABLE(c-pages,         [  --disable-c-pages         Use pages handling written in C. Defaults to true],     USECPAGES=${enableval},        USECPAGES=yes)
 AC_ARG_ENABLE(c-fsindex,       [  --disable-c-fsindex       Use index handling written in C. Defaults to true],     USECFSINDEX=${enableval},      USECFSINDEX=yes)
 AC_ARG_ENABLE(c-readerchannel, [  --disable-c-readerchannel Use reader handler written in C. Defaults to true],     USECREADERCHAN=${enableval},   USECREADERCHAN=yes)
+AC_ARG_ENABLE(c-pkgconfig,     [  --disable-c-pkgconfig     Use pkgconfig written in C. Defaults to true],          USECPKGCONFIG=${enableval},    USECPKGCONFIG=yes)
 
 if test ${INTERNALDEBUG} = yes; then
     AC_DEFINE(COOKFS_INTERNAL_DEBUG)
@@ -189,27 +190,41 @@ else
     COOKFS_PKGCONFIG_USEBZ2=0
 fi
 
+if test ${USECFSINDEX} = yes; then
+    AC_DEFINE(COOKFS_USECFSINDEX)
+    COOKFS_PKGCONFIG_USECFSINDEX=1
+    TEA_ADD_SOURCES([fsindex.c fsindexIO.c fsindexCmd.c])
+else
+    COOKFS_PKGCONFIG_USECFSINDEX=0
+fi
+
+COOKFS_PKGCONFIG_FEATURE_METADATA=1
+
 AC_SUBST(COOKFS_PKGCONFIG_FEATURE_ASIDE)
 AC_SUBST(COOKFS_PKGCONFIG_USECPAGES)
 AC_SUBST(COOKFS_PKGCONFIG_USECREADERCHAN)
 AC_SUBST(COOKFS_PKGCONFIG_USEBZ2)
 AC_SUBST(COOKFS_PKGCONFIG_USEXZ)
-
-if test ${USECFSINDEX} = yes; then
-    AC_DEFINE(COOKFS_USECFSINDEX)
-    COOKFS_PKGCONFIG_USECFSINDEX=1
-    COOKFS_PKGCONFIG_FEATURE_METADATA=1
-    TEA_ADD_SOURCES([fsindex.c fsindexIO.c fsindexCmd.c])
-else
-    COOKFS_PKGCONFIG_USECFSINDEX=0
-
-    # TODO: move this outside conditions since
-    # metadata is supported in pure Tcl version as well
-    COOKFS_PKGCONFIG_FEATURE_METADATA=1
-fi
 AC_SUBST(COOKFS_PKGCONFIG_USECFSINDEX)
 AC_SUBST(COOKFS_PKGCONFIG_FEATURE_METADATA)
 
+if test ${USECPKGCONFIG} = yes; then
+    COOKFS_PKGCONFIG_USECPKGCONFIG=1
+    AC_DEFINE_UNQUOTED(COOKFS_PKGCONFIG_FEATURE_ASIDE, $COOKFS_PKGCONFIG_FEATURE_ASIDE)
+    AC_DEFINE_UNQUOTED(COOKFS_PKGCONFIG_USECPAGES, $COOKFS_PKGCONFIG_USECPAGES)
+    AC_DEFINE_UNQUOTED(COOKFS_PKGCONFIG_USECREADERCHAN, $COOKFS_PKGCONFIG_USECREADERCHAN)
+    AC_DEFINE_UNQUOTED(COOKFS_PKGCONFIG_USECPKGCONFIG, $COOKFS_PKGCONFIG_USECPKGCONFIG)
+    AC_DEFINE_UNQUOTED(COOKFS_PKGCONFIG_USEBZ2, $COOKFS_PKGCONFIG_USEBZ2)
+    AC_DEFINE_UNQUOTED(COOKFS_PKGCONFIG_USEXZ, $COOKFS_PKGCONFIG_USEXZ)
+    AC_DEFINE_UNQUOTED(COOKFS_PKGCONFIG_USECFSINDEX, $COOKFS_PKGCONFIG_USECFSINDEX)
+    AC_DEFINE_UNQUOTED(COOKFS_PKGCONFIG_FEATURE_METADATA, $COOKFS_PKGCONFIG_FEATURE_METADATA)
+
+    AC_DEFINE(COOKFS_USEPKGCONFIG)
+else
+    COOKFS_PKGCONFIG_USECPKGCONFIG=0
+fi
+
+AC_SUBST(COOKFS_PKGCONFIG_USECPKGCONFIG)
 
 #--------------------------------------------------------------------
 # This macro generates a line to use when building a library.  It
